# chibi

./: README.md  justfile
api/: Cargo.toml  Shuttle.toml  schema.sql
api/src/: main.rs
api/src/routes/: mod.rs  shortner.rs
api/src/services/: mod.rs  shortener.rs
api/static/: index.html
api/static/_astro/: index.03dd5403.css  index.7d34533d.css  index.95feb728.css
frontend/: astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.cjs
frontend/src/components/: ShortenForm.astro
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
