[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3.55", features = ["static-files"] }
tokio = "1.27.0"
shuttle-runtime = "0.15.0"
shuttle-poem = "0.15.0"
shuttle-shared-db = { version = "0.15.0", features = ["postgres"] }
sqlx = { version = "0.6.3", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
shuttle-service = "0.15.0"
tracing = "0.1.37"
shuttle-static-folder = "0.15.0"
anyhow = "1.0.71"
poem-openapi = { version = "2.0.26", features = ["swagger-ui"] }
serde = { version = "1.0.162", features = ["derive"] }
rand = "0.8.5"
